<resources>
    <string name="app_name">Sách ma pháp</string>
    <string name="password">Mật khẩu</string>
    <string name="username_email_or_mobile_phone">Tên người dùng, email/số di động</string>
    <string name="log_in">Đăng nhập</string>
    <string name="forget_password">Quên mật khẩu ư?</string>
    <string name="create_new_account">Tạo tài khoản mới</string>
    <string name="magic_book">Magic book</string>
    <string name="firstname">Tên</string>
    <string name="surname">Họ</string>
    <string name="username">Tên đăng nhập</string>
    <string name="confirm_password">Nhập lại mật khẩu</string>
    <string name="date_of_birth_dd_mm_yyyy">Ngày sinh (dd/mm/yyyy)</string>
    <string name="mobile_number">Số điện thoại</string>
    <string name="email_address">Địa chỉ email</string>
    <string name="sign_up">Đăng ký</string>
    <string name="find_your_account">Tìm tài khoản</string>
    <string name="info_forget">Nhập tên người dùng, email hoặc số di động của bạn.</string>
    <string name="change_your_password">Đổi mật khẩu</string>
    <string name="enter_your_code">Nhập mã xác thực</string>
    <string name="info_conform_account">Chúng tôi sẽ gửi cho bạn mã đến địa chỉ email của bạn</string>
    <string name="your_email">v**@*******</string>
    <string name="info_your_email">Chúng tôi sẽ gửi mã xác thực đến:</string>
    <string name="example">Ví dụ</string>
    <string name="not_you">Không phải bạn</string>
    <string name="login_with_password">Đăng nhập với mật khẩu</string>
    <string name="next">Tiếp tục</string>
    <string name="home">Trang chủ</string>
    <string name="search">Tìm kiếm</string>
    <string name="bookshelf">Kệ sách</string>
    <string name="settings">Cài đặt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="update">Cập nhật</string>
    <string name="genre">Danh mục</string>
    <string name="enough_content">Truyện đủ nội dung</string>
    <string name="composed">Truyện sáng tác</string>
    <string name="your">Truyện của bạn</string>
    <string name="search_data">Tên truyện, tác giả</string>
    <string name="log_out">Đăng xuất</string>
    <string name="edit_info">Chỉnh sửa thông tin</string>
    <string name="manage_account">Quản lý tài khoản</string>
    <string name="manage_genre">Quản lý danh mục</string>
    <string name="search_account">Nhập tên tài khoản, email, số điện thoại</string>
    <string name="search_genre">Nhập tên thể loại</string>
    <string name="login_fail">Tên đăng nhập hoặc mật khẩu không hợp lệ</string>
    <string name="register_account">Đăng ký tài khoản</string>
    <string name="remember_account">Nhớ tài khoản cho lần đăng nhập tiếp theo</string>
    <string name="save_info">Lưu thông tin</string>
    <string name="yes">Lưu</string>
    <string name="add">Thêm</string>
    <string name="abort">Huỷ bỏ</string>
    <string name="no">Không</string>
    <string name="logging_in">Đăng đăng nhập …</string>
    <string name="require">Bắt buộc</string>
    <string name="require_genre_name">Tên danh mục không thể trống</string>
    <string name="error_email">Email không hợp lệ</string>
    <string name="error_phone">Số điện thoại không hợp lệ</string>
    <string name="error_password">Mật khẩu không khớp</string>
    <string name="error_date_of_birth">Định dạng không hợp lệ</string>
    <string name="an_error_occurred">Xảy ra lỗi</string>
    <string name="create_successful">Đăng ký thành công</string>
    <string name="create_failure">Đăng ký thất bại</string>
    <string name="management_account">Quản lý tài khoản</string>
    <string name="management_genre">Quản lý danh mục</string>
    <string name="management_story">Quản lý truyện</string>
    <string name="management_comment">Quản lý bình luận</string>
    <string name="add_genre">Thêm danh mục</string>
    <string name="enter_your_genre">Nhập tên danh mục</string>
    <string name="add_genre_fail">Thêm danh mục thất bại</string>
    <string name="add_genre_successful">Thêm danh mục thành công</string>
    <string name="edit">Sửa</string>
    <string name="active_genre">Danh mục (không bị khóa)</string>
    <string name="inactive_genre">Danh mục bị khóa</string>
    <string name="edit_genre">Sửa danh mục</string>
    <string name="genre_status">Trạng thái</string>
    <string name="edit_genre_fail">Sửa danh mục thất bại</string>
    <string name="edit_genre_successful">Sửa danh mục thành công</string>
    <string name="user">Người dùng</string>
    <string name="active_user">Người dùng (không bị khóa)</string>
    <string name="inactive_user">Người dùng bị khóa</string>
    <string name="edit_user">Sửa trạng thái người dùng</string>
    <string name="edit_status_user">Sửa trạng thái</string>
    <string name="enter_locked_date">Nhập số ngày muốn khóa</string>
    <string name="require_locked_time">Thời hạn khóa phải khác 0</string>
    <array name="role_name">
        <item>Người dùng</item>
        <item>Tác giả</item>
        <item>Quản lý nội dung</item>
    </array>
    <string name="edit_user_successful">Sửa người dùng thành công</string>
    <string name="edit_user_fail">Sửa người dùng thất bại</string>
    <string name="story_management">Quản lý truyện</string>
    <string name="genre_management">Quản lý danh mục</string>
    <string name="user_management">Quản lý người dùng</string>
    <string name="add_story">Thêm truyện mới</string>
    <string name="search_story">Tìm kiếm truyện</string>
    <string name="censor_story">Truyện chờ được duyệt</string>
    <string name="reported_story">Truyện bị báo cáo</string>
    <string name="story_name">Tên truyện</string>
    <string name="author">Tên tác giả</string>
    <string name="optional">Chuyện có chương</string>
    <string name="content">Nội dung truyện</string>
    <string name="publish">Xuất bản truyện</string>
    <string name="add_chapter">Thêm nội dung cho chương</string>
    <string name="chapter_number">Nội dung truyện</string>
    <string name="add_content_chapter">Thêm nội dung</string>
    <string name="create_story_failure">Thêm truyện thất bại</string>
    <string name="create_story_successful">Thêm truyện thành công</string>
    <string name="add_chapter_success">Thêm nội dung thành công</string>
    <string name="require_add_chapter">Nội dung chương không thể trống</string>
    <string name="manage_story">Quản lý truyện</string>
    <string name="search_story_manager">Nhập tên thể loại, tên truyện</string>
    <string name="name">Truyện | Chương</string>
    <string name="name_story">Truyện</string>
    <string name="chapter_name">Chương</string>
    <string name="edit_story">Sửa truyện</string>
    <string name="story_name_require">Tên truyện không thể trống</string>
    <string name="author_name_require">Tên tác giả không thể trống</string>
    <string name="edit_successful">Sửa thành công</string>
    <string name="edit_failure">Sửa thất bại</string>
    <string name="edit_content">Chỉnh sửa nội dung</string>
    <string name="edit_chapter_success">Sửa nội dung thành công</string>
    <string name="old_password">Mật khẩu cũ</string>
    <string name="old_password_error">Mật khẩu cũ không chính xác</string>
    <string name="upload_avatar">Cập nhật ảnh đại diện</string>
    <string name="upload_avatar_failure">Cập nhật ảnh đại diện thất bại</string>
    <string name="account_is_not_exist">Tài khoản không tồn tại</string>
    <string name="error_otp">Mã xác thực không hợp lệ</string>
    <string name="expire_otp">Mã xác thực hết hạn</string>
    <string name="change_password_successful">Đổi mật khẩu thành công</string>
    <string name="change_password_failure">Đổi mật khẩu thất bại</string>
    <string name="upload_image_story">Chọn ảnh cho truyện</string>
    <string name="upload_image_error">Vui lòng chọn ảnh cho truyện</string>
    <string name="upload_image_failure">Cập nhật truyện thất bại</string>
    <string name="update_image_story">Sửa ảnh cho truyện</string>
    <string name="upload_image_story_failure">Cập ảnh cho truyện thất bại</string>
    <string name="delete">Xóa</string>
    <string name="delete_successful">Xóa truyện thành công</string>
    <string name="delete_failure">Sửa truyện thất bại</string>
    <string name="compose">Sáng tác truyện</string>
    <string name="begin_compose">Bắt đầu sáng tác truyện</string>
    <string name="your_compose">Sáng tác của bạn</string>
    <string name="notification">Thông báo</string>
    <string name="approve_story">Phê duyệt truyện</string>
    <string name="approve">Duyệt</string>

</resources>
