<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ForgotPassword2Activity">

    <TextView
        android:id="@+id/text_view_info_conform_account"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:text="@string/info_conform_account"
        android:textSize="24sp"
        android:textStyle="bold"
        tools:ignore="VisualLintOverlap,TextSizeCheck" />

    <View
        android:id="@+id/view_horizontal"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="1dp"
        android:background="@color/md_theme_light_scrim" />

    <TextView
        android:id="@+id/text_view_info_email"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:text="@string/info_your_email"
        android:textSize="18sp"
        tools:ignore="TextSizeCheck,VisualLintOverlap" />

    <TextView
        android:id="@+id/text_view_your_email"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:text="@string/your_email"
        android:textSize="16sp"
        tools:ignore="VisualLintOverlap" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/user"
        app:shapeAppearanceOverlay="@style/circle_image_view"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/text_view_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="@dimen/custom_width_text_input_layout_login"
        android:text="@string/example"
        android:textSize="16sp"
        android:textStyle="bold"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/button_not_you"
        style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_you"
        android:textColor="@color/md_theme_dark_scrim"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/button_login_with_password"
        style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_with_password"
        tools:ignore="VisualLintOverlap" />

    <Button
        android:id="@+id/button_next_forgot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/next"
        tools:ignore="VisualLintOverlap" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_sub_forgot"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:constraint_referenced_ids="button_login_with_password,button_next_forgot" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_conform_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="text_view_info_conform_account,view_horizontal,text_view_info_email,text_view_your_email,image_view_user,text_view_name,button_not_you,flow_sub_forgot"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5" />


</androidx.constraintlayout.widget.ConstraintLayout>