<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.MenuStoryFragment">


    <TextView
        android:id="@+id/text_view_home"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:text="@string/story_management"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/text_view_add_story"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/add_story"
        android:textColor="@color/md_theme_dark_shadow"
        app:drawableStartCompat="@drawable/md_add"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/text_view_search_story"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/search_story"
        android:textColor="@color/md_theme_dark_shadow"
        app:drawableStartCompat="@drawable/md_search"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/text_view_new_story"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/censor_story"
        android:textColor="@color/md_theme_dark_shadow"
        app:drawableStartCompat="@drawable/md_list"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/text_view_reported_story"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/reported_story"
        android:textColor="@color/md_theme_dark_shadow"
        app:drawableStartCompat="@drawable/md_report"
        tools:ignore="VisualLintOverlap" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="text_view_add_story,text_view_search_story,text_view_new_story,text_view_reported_story"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_home"
        app:layout_constraintVertical_bias="0.5" />
</androidx.constraintlayout.widget.ConstraintLayout>