<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.AdminFragment">

    <TextView
        android:id="@+id/text_view_home"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:paddingHorizontal="5dp"
        android:id="@+id/text_view_management_account_admin"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/management_account"
        android:textColor="@color/md_theme_dark_shadow"
        app:drawableStartCompat="@drawable/md_management_account"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/text_view_management_genre_admin"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/management_genre"
        android:textColor="@color/md_theme_dark_shadow"
        app:drawableStartCompat="@drawable/md_management_genre"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/text_view_management_store_admin"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/management_story"
        android:textColor="@color/md_theme_dark_shadow"
        app:drawableStartCompat="@drawable/md_management_story"
        tools:ignore="VisualLintOverlap" />

    <TextView
        android:id="@+id/text_view_management_comment_admin"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:minHeight="48dp"
        android:text="@string/management_comment"
        android:textColor="@color/md_theme_dark_shadow"
        app:drawableStartCompat="@drawable/md_management_comment"
        tools:ignore="VisualLintOverlap" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_admin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="text_view_management_account_admin,text_view_management_genre_admin,text_view_management_store_admin,text_view_management_comment_admin"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_home"
        app:layout_constraintVertical_bias="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>