<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ChangeInfoActivity">

    <TextView
        android:id="@+id/text_view_change_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_info"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@id/flow_sign_in"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.helper.widget.Flow
        android:id="@+id/flow_sign_in"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:constraint_referenced_ids="image_view_user_avatar,text_input_layout_first_name,text_input_layout_last_name,text_input_layout_date_of_birth,text_input_layout_phone,text_input_layout_email,button_upload_avatar,button_change"
        app:flow_verticalGap="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_view_change_info"
        app:layout_constraintVertical_bias="0.5" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/image_view_user_avatar"
        android:layout_width="@dimen/custom_size_image_user_settings"
        android:layout_height="@dimen/custom_size_image_user_settings"
        android:src="@drawable/user"
        app:shapeAppearanceOverlay="@style/circle_image_view"
        tools:ignore="ImageContrastCheck" />



    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_first_name"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_light_onPrimary"
        android:hint="@string/firstname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_first_name"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="@color/md_theme_light_outlineVariant" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_last_name"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_light_onPrimary"
        android:hint="@string/surname">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_last_name"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColorHint="@color/md_theme_light_outlineVariant" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_date_of_birth"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_light_onPrimary"
        android:hint="@string/date_of_birth_dd_mm_yyyy">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_date_of_birth"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:textColorHint="@color/md_theme_light_outlineVariant" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_phone"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_light_onPrimary"
        android:hint="@string/mobile_number">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text_phone"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColorHint="@color/md_theme_light_outlineVariant" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/text_input_layout_email"
        style="@style/Widget.Material3.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:background="@color/md_theme_light_onPrimary"
        android:hint="@string/email_address">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_email"
            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/md_theme_light_outlineVariant" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button_upload_avatar"
        style="@style/Widget.Material3.Button.TextButton.Dialog.Flush"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_avatar"
        tools:ignore="VisualLintOverlap" />


    <Button
        android:id="@+id/button_change"
        android:layout_width="@dimen/custom_width_text_input_layout_login"
        android:layout_height="wrap_content"
        android:text="@string/edit"
        tools:ignore="VisualLintButtonSize,DuplicateSpeakableTextCheck" />
</androidx.constraintlayout.widget.ConstraintLayout>